# code-assistant

./: .gitignore  LICENSE  README.md  code_graph.json  main.py  pyproject.toml  requirements.txt
embeddings/: embeddings.py
helpers/: code_chunk_extractor.py  code_graph.py
llm/: qwen_llm.py
sample_data/: test.ts
src/: main.py
src/code_assistant/embeddings/: __init__.py  embedding.py
src/code_assistant/llm/: __init__.py  deepseek_llm.py  qrok_qwen_llm.py  qwen_llm.py
src/code_assistant/utils/: __init__.py  code_chunk_extractor.py  code_graph.py
src/code_assistant/vector_db/: __init__.py  chroma_store.py
tests/: test_normalize_results.py
vector_db/: chroma_store.py
