[project]
name = "code-assistant"
version = "0.1.0"
description = "Lightweight local Code Assistant with RAG"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "accelerate>=1.12.0",
    "chromadb==0.4.24",
    "ctransformers>=0.2.27",
    "groq>=0.37.0",
    "llama-cpp-python>=0.3.16",
    "numpy<2",
    "pydantic==1.10.15",
    "pytest>=9.0.1",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "tiktoken>=0.12.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-typescript>=0.23.2",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "B", "I"]  # all important error/warning codes
ignore = ["E501"]  # ignore line-too-long, we already set line-length
exclude = ["build", "dist", ".venv", "__pycache__", "data", "models"]

[tool.mypy]
python_version = 3.11
strict = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
